@@ -137,6 +137,8 @@ cache.permission.size=1000
 
 # The location of the Mango Automation store from which to get license files.
 store.url=https://store.infiniteautomation.com
+# Disables upgrading the core or modules, prevents both downloading from the store and unpacking zip files
+store.disableUpgrades=false
 
 # SSL control
 
