@@ -535,6 +535,7 @@ modules.installUpgrades=Show major version upgrades, new license purchase requir
 modules.dependencyMissing=A module this module depends upon is available to update or install but not selected. Aborting.
 modules.unsigned.development=Unsigned modules can only be uploaded in development mode
 modules.unsigned.core.development=Unsigned cores can only be uploaded in development mode
+modules.error.upgradesDisabled=Upgrades are disabled
 dsDetils.asof=(as of {0})
 
 dsEdit.name=Name
