@@ -72,6 +72,7 @@
 * System login events are now instantaneous events and no longer "return to normal" on logout
 * Ability to create initial database from a backup file or .sql script. See "db.createTables.restoreFrom" env property.
 * Option to interpolate event properties into process event handler commands
+* Add env property to disable upgrades (store.disableUpgrades)
 
 *Version 3.7.4*
 * Improve work item failure logging
